<resources>
    <string name="app_name">Tennis Kata</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="name">Your Name</string>
    <string name="play">Play</string>
    <string name="hit">HIT!!!</string>
    <string name="finish">End Game</string>
    <string name="score">Score</string>
    <string name="reset">Reset</string>
    <string name="score_board">Score Board</string>
    <string name="start_game">Start Game</string>
</resources>
